--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -52,6 +52,10 @@ sidebar:
             icon: search
             # `open-algolia-search` classes are used to open algolia search modal
             class: open-algolia-search
+        authors:
+            title: Authors
+            url: /authors
+            icon: user-circle
         about:
             title: global.about
             url: /#about
