다중 author 기능 구현 완료 // TODO: author 폰트 변경 필요

--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -148,6 +148,15 @@ authors:
         title: global.github
         url: https://github.com/
         icon: github
+  fallingg:
+      name: fallingg
+      email: smartyjpark@gmail.com
+      picture: 'http://cphoto.asiae.co.kr/listimglink/6/2017072813523484896_2.png'
+      links:
+        github:
+          title: global.github
+          url: https://github.com/
+          icon: github
 
 
 # -------------
