Earl 님 닉네임 변경 및 포스트 제목에 날짜 기입

--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -175,8 +175,8 @@ authors:
           title: global.github
           url: https://github.com/
           icon: github
-  earl:
-      name: earl
+  Earl:
+      name: Earl
       email:
       picture: 'http://cphoto.asiae.co.kr/listimglink/6/2017072813523484896_2.png'
       links:
